[metadata]
name = pyfilters
version = 0.1.1
author = synodriver
author_email = diguohuangjiajinweijun@gmail.com
description = Bloom filters and other filter algorithms based on memory and redis
long_description = file: README.markdown
long_description_content_type = text/markdown
url = https://github.com/synodriver/pyfilters
project_urls =
    Bug Tracker = https://github.com/synodriver/pyfilters/issues
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >=3.7